--- a/arch/arm/configs/imx6ul-var-dart_defconfig
+++ b/arch/arm/configs/imx6ul-var-dart_defconfig
@@ -172,6 +172,7 @@ CONFIG_KEYBOARD_IMX=y
 CONFIG_MOUSE_PS2=m
 CONFIG_MOUSE_PS2_ELANTECH=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_IMX6UL_TSC=y
 CONFIG_INPUT_MISC=y
