--- a/arch/arm/boot/dts/imx6ul-var-dart.dtsi
+++ b/arch/arm/boot/dts/imx6ul-var-dart.dtsi
@@ -89,6 +89,18 @@
 		};
 	};
 
+	sound {
+		compatible = "fsl,imx-audio-wm8731";
+		model = "wm8731-audio";
+		cpu-dai = <&sai2>;
+		audio-codec = <&codec>;
+		audio-routing =
+			"Headphone Jack",	"LHPOUT",
+			"Headphone Jack",	"RHPOUT",
+			"LLINEIN",		"Line Jack",
+			"RLINEIN",		"Line Jack";
+	};
+
 #ifdef WIFI
 
 	/* define hook for BCMDHD driver.   */
@@ -251,7 +263,7 @@
 	assigned-clocks = <&clks IMX6UL_CLK_SAI2_SEL>,<&clks IMX6UL_CLK_SAI2>;
 	assigned-clock-parents = <&clks IMX6UL_CLK_PLL4_AUDIO_DIV>;
 	assigned-clock-rates = <0>, <11289600>;
-	status = "disabled";
+	status = "okay";
 };
 
 &adc1 {
@@ -415,6 +427,12 @@
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
 
+	codec: wm8731@1a {
+		compatible = "wlf,wm8731";
+		reg = <0x1a>;
+		clocks = <&clks IMX6UL_CLK_SAI2>;
+		clock-names = "mclk";
+	};
 };
 
 &iomuxc {
@@ -507,7 +525,7 @@
 
 		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
-				MX6UL_PAD_JTAG_TRST_B__SAI2_TX_DATA	0x110b0
+				MX6UL_PAD_LCD_DATA00__PWM1_OUT		0x110b0
 			>;
 		};
 
@@ -648,6 +666,7 @@
 			fsl,pins = <
 				MX6UL_PAD_JTAG_TDI__SAI2_TX_BCLK	0x17088
 				MX6UL_PAD_JTAG_TDO__SAI2_TX_SYNC	0x17088
+				MX6UL_PAD_JTAG_TRST_B__SAI2_TX_DATA	0x11088
 				MX6UL_PAD_JTAG_TCK__SAI2_RX_DATA	0x11088
 				MX6UL_PAD_JTAG_TMS__CCM_CLKO1		0x17088
 			>;
