defined correct clocks for PWM6, added PWM6 to device tree, added pwm-beeper

--- a/arch/arm/boot/dts/imx6ul-var-dart.dtsi
+++ b/arch/arm/boot/dts/imx6ul-var-dart.dtsi
@@ -43,8 +43,14 @@
 	backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm8 0 20000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
-		default-brightness-level = <6>;
+		brightness-levels = <255 240 224 208 192 176 160 144 128 112 96 80 64 48 32 16 0>;
+		default-brightness-level = <16>;
+		status = "okay";
+	};
+
+	beeper {
+		compatible = "pwm-beeper";
+		pwms = <&pwm6 0 5000000>;
 		status = "okay";
 	};
 
@@ -217,15 +223,15 @@
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: timing0 {
-				clock-frequency =<35000000>;
+				clock-frequency =<46800000>;
 				hactive = <800>;
 				vactive = <480>;
-				hfront-porch = <40>;
-				hback-porch = <40>;
-				hsync-len = <48>;
-				vback-porch = <29>;
-				vfront-porch = <13>;
-				vsync-len = <3>;
+				hfront-porch = <16>;
+				hback-porch = <46>;
+				hsync-len = <2>;
+				vback-porch = <23>;
+				vfront-porch = <7>;
+				vsync-len = <2>;
 				hsync-active = <0>;
 				vsync-active = <0>;
 				de-active = <1>;
@@ -233,6 +239,12 @@
 			};
 		};
 	};
+};
+
+&pwm6 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm6>;
+	status = "okay";
 };
 
 &pwm8 {
@@ -493,6 +505,12 @@
 			fsl,pins = <
 				MX6UL_PAD_LCD_CLK__LCDIF_CLK		0x79
 				MX6UL_PAD_LCD_ENABLE__LCDIF_ENABLE	0x79
+			>;
+		};
+
+		pinctrl_pwm6: pwm6grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x110b0
 			>;
 		};
 
