--- a/arch/arm/configs/imx6ul-var-dart_defconfig
+++ b/arch/arm/configs/imx6ul-var-dart_defconfig
@@ -178,6 +178,7 @@ CONFIG_TOUCHSCREEN_IMX6UL_TSC=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_MMA8450=y
 CONFIG_INPUT_MPL3115=y
+CONFIG_INPUT_PWM_BEEPER=y
 CONFIG_SENSOR_FXLS8471=y
 CONFIG_INPUT_ISL29023=y
 CONFIG_SERIO_SERPORT=m
