--- a/arch/arm/configs/imx6ul-var-dart_defconfig
+++ b/arch/arm/configs/imx6ul-var-dart_defconfig
@@ -220,6 +220,7 @@ CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_MMA8450=y
 CONFIG_INPUT_MPL3115=y
+CONFIG_INPUT_PWM_BEEPER=y
 CONFIG_SENSOR_FXLS8471=y
 CONFIG_INPUT_ISL29023=y
 CONFIG_SERIO_SERPORT=m
