--- a/arch/arm/boot/dts/imx6ul-var-dart.dtsi
+++ b/arch/arm/boot/dts/imx6ul-var-dart.dtsi
@@ -428,12 +428,14 @@
 			fsl,pins = <
 				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0	/* LED 1 */
 				MX6UL_PAD_CSI_DATA00__GPIO4_IO21	0x1b0b0	/* LED 2 */
-				MX6UL_PAD_GPIO1_IO00__GPIO1_IO00	0x17059	/* User Button */
 				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
 				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x1b0b0	/* BT Enable */
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x1b0b0
 				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05 	0x1b0b0
+				MX6UL_PAD_GPIO1_IO00__GPT1_CAPTURE1	0x1b0b0 /* ROTORCODESIGNAL */
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 /* SENSE_PWR_IN */
+				MX6UL_PAD_CSI_DATA01__GPIO4_IO22	0x1b0b0 /* HW_VARIANT_3 */
 			>;
 		};
 
