--- a/arch/arm/boot/dts/imx6ul-var-dart.dtsi
+++ b/arch/arm/boot/dts/imx6ul-var-dart.dtsi
@@ -157,16 +157,7 @@
 	phy-reset-duration=<100>;
 	phy-handle = <&ethphy0>;
 	status = "okay";
-};
 
-&fec2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_enet2>;
-	phy-mode = "rmii";
-	phy-handle = <&ethphy1>;
-	phy-reset-gpios=<&gpio1 10 1>;
-	phy-reset-duration=<100>;
-	status = "okay";
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -276,14 +267,6 @@
 	pinctrl-0 = <&pinctrl_uart2>;
 	fsl,uart-has-rtscts;
 	status = "okay";
-};
-
-/* ttymxc2 UART */
-&uart3 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart3>;
-	fsl,uart-has-rtscts;
-	status = "disabled";
 };
 
 &wdog1 {
@@ -418,15 +401,23 @@
 	imx6ul-evk {
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0	/* LED 1 */
-				MX6UL_PAD_CSI_DATA00__GPIO4_IO21	0x1b0b0	/* LED 2 */
-				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
-				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0	/* CONTR_BRD_EN_LID */
+				MX6UL_PAD_CSI_DATA00__GPIO4_IO21	0x1b0b0	/* HW_VERSION_3 */
+				MX6UL_PAD_GPIO1_IO07__ENET1_MDC		0x1b0b0
+				MX6UL_PAD_GPIO1_IO06__ENET1_MDIO	0x1b0b0
 				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x1b0b0	/* BT Enable */
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x1b0b0
-				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05 	0x1b0b0
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05 	0x1b0b0 /* TOUCH_IRQ_CHANGE */
 				MX6UL_PAD_GPIO1_IO00__GPT1_CAPTURE1	0x1b0b0 /* ROTORCODESIGNAL */
+				MX6UL_PAD_UART3_RX_DATA__GPIO1_IO25	0x1b0b0 /* EN_TESTMODE */
 				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 /* SENSE_PWR_IN */
+				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x1b0b0 /* SPEEDSIGNAL */
+				MX6UL_PAD_ENET2_RX_EN__GPIO2_IO10	0x1b0b0 /* HW_VERSION_0 */
+				MX6UL_PAD_ENET2_TX_DATA0__GPIO2_IO11	0x1b0b0 /* HW_VERSION_1 */
+				MX6UL_PAD_ENET2_TX_DATA1__GPIO2_IO12	0x1b0b0 /* HW_VERSION_2 */
+				MX6UL_PAD_ENET2_TX_EN__GPIO2_IO13	0x1b0b0 /* HW_VARIANT_0 */
+				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14	0x1b0b0 /* HW_VARIANT_1 */
+				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15	0x1b0b0 /* HW_VARIANT_2 */
 				MX6UL_PAD_CSI_DATA01__GPIO4_IO22	0x1b0b0 /* HW_VARIANT_3 */
 			>;
 		};
@@ -441,20 +432,6 @@
 				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
 				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
 				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b031
-			>;
-		};
-
-		pinctrl_enet2: enet2grp {
-			fsl,pins = <
-				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA1__ENET2_RDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_EN__ENET2_TX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA0__ENET2_TDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA1__ENET2_TDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_CLK__ENET2_REF_CLK2	0x4001b031
-				MX6UL_PAD_JTAG_MOD__GPIO1_IO10		0x1b0b0
 			>;
 		};
 
@@ -504,13 +481,19 @@
 
 		pinctrl_pwm6: pwm6grp {
 			fsl,pins = <
-				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x110b0
+				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x110b0 /* PWM BUZZER+ */
+			>;
+		};
+
+		pinctrl_pwm7: pwm7grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TCK__PWM7_OUT		0x110b0 /* PWM BUZZER- */
 			>;
 		};
 
 		pinctrl_pwm8: pwm8grp {
 			fsl,pins = <
-				MX6UL_PAD_JTAG_TRST_B__PWM8_OUT		0x110b0
+				MX6UL_PAD_JTAG_TRST_B__PWM8_OUT		0x110b0 /* PWM BACKLIGHT */
 			>;
 		};
 
@@ -527,15 +510,6 @@
 				MX6UL_PAD_UART2_RX_DATA__UART2_DCE_RX	0x1b0b1
 				MX6UL_PAD_UART2_CTS_B__UART2_DCE_CTS	0x1b0b1
 				MX6UL_PAD_UART2_RTS_B__UART2_DCE_RTS	0x1b0b1
-			>;
-		};
-
-		pinctrl_uart3: uart3grp {
-			fsl,pins = <
-				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX	0x1b0b1
-				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART3_CTS_B__UART3_DCE_CTS	0x1b0b1
-				MX6UL_PAD_UART3_RTS_B__UART3_DCE_RTS	0x1b0b1
 			>;
 		};
 
