--- a/arch/arm/boot/dts/imx6ul-var-dart.dtsi
+++ b/arch/arm/boot/dts/imx6ul-var-dart.dtsi
@@ -230,6 +230,12 @@
 	status = "okay";
 };
 
+&pwm7 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm7>;
+	status = "okay";
+};
+
 &pwm8 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm8>;
@@ -419,6 +425,7 @@
 				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14	0x1b0b0 /* HW_VARIANT_1 */
 				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15	0x1b0b0 /* HW_VARIANT_2 */
 				MX6UL_PAD_CSI_DATA01__GPIO4_IO22	0x1b0b0 /* HW_VARIANT_3 */
+				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x1b0b0 /* EN_PRODUCTIONMODE */
 			>;
 		};
 
