--- a/arch/arm/boot/dts/imx6ul-imx6ull-var-dart-common.dtsi
+++ b/arch/arm/boot/dts/imx6ul-imx6ull-var-dart-common.dtsi
@@ -22,12 +22,17 @@
 
 	backlight {
 		compatible = "pwm-backlight";
-		pwms = <&pwm1 0 20000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
-		default-brightness-level = <6>;
+		pwms = <&pwm8 0 20000>;
+		brightness-levels = <254 240 224 208 192 176 160 144 128 112 96 80 64 48 32 16 0>;
+		default-brightness-level = <16>;
 		status = "okay";
 	};
 
+	beeper {
+		compatible = "pwm-beeper";
+		pwms = <&pwm6 0 5000000>;
+		status = "disabled";
+	}; 
 	pxp_v4l2 {
 		compatible = "fsl,imx6ul-pxp-v4l2", "fsl,imx6sx-pxp-v4l2", "fsl,imx6sl-pxp-v4l2";
 		status = "okay";
@@ -97,28 +102,6 @@
 		};
 	};
 
-	sound {
-		compatible = "fsl,imx-audio-wm8731";
-		model = "wm8731-audio";
-		cpu-dai = <&sai2>;
-		audio-codec = <&codec>;
-		audio-routing =
-			"Headphone Jack",	"LHPOUT",
-			"Headphone Jack",	"RHPOUT",
-			"LLINEIN",		"Line Jack",
-			"RLINEIN",		"Line Jack";
-	};
-
-	keys {
-		compatible = "gpio-keys";
-
-		user {
-			gpios = <&gpio1 0 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_BACK>;
-			gpio-key,wakeup;
-		};
-	};
-
 	leds {
 		compatible = "gpio-leds";
 
@@ -159,17 +142,6 @@
 	phy-reset-on-resume;
 	phy-handle = <&ethphy0>;
 	status = "okay";
-};
-
-&fec2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_enet2>;
-	phy-mode = "rmii";
-	phy-handle = <&ethphy1>;
-	phy-reset-gpios=<&gpio1 10 1>;
-	phy-reset-duration=<100>;
-	phy-reset-on-resume;
-	status = "okay";
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -180,14 +152,6 @@
 			clocks = <&rmii_ref_clk>;
 			clock-names = "rmii-ref";
 			reg = <1>;
-		};
-
-		ethphy1: ethernet-phy@3 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			micrel,rmii-reference-clock-select-25-mhz;
-			clocks = <&rmii_ref_clk>;
-			clock-names = "rmii-ref";
-			reg = <3>;
 		};
 	};
 };
@@ -226,15 +190,15 @@
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: timing0 {
-				clock-frequency =<35000000>;
+				clock-frequency =<46800000>;
 				hactive = <800>;
 				vactive = <480>;
-				hfront-porch = <40>;
-				hback-porch = <40>;
-				hsync-len = <48>;
-				vback-porch = <29>;
-				vfront-porch = <13>;
-				vsync-len = <3>;
+				hfront-porch = <16>;
+				hback-porch = <46>;
+				hsync-len = <2>;
+				vback-porch = <23>;
+				vfront-porch = <7>;
+				vsync-len = <2>;
 				hsync-active = <0>;
 				vsync-active = <0>;
 				de-active = <1>;
@@ -244,22 +208,24 @@
 	};
 };
 
-&pwm1 {
+&pwm6 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm1>;
+	pinctrl-0 = <&pinctrl_pwm6>;
+	status = "okay";
+};
+
+&pwm7 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm7>;
+	status = "okay";
+};   					   							   
+&pwm8 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm8>;
 	status = "okay";
 };
 
 &pxp {
-	status = "okay";
-};
-
-&sai2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_sai2>;
-	assigned-clocks = <&clks IMX6UL_CLK_SAI2_SEL>,<&clks IMX6UL_CLK_SAI2>;
-	assigned-clock-parents = <&clks IMX6UL_CLK_PLL4_AUDIO_DIV>;
-	assigned-clock-rates = <0>, <11289600>;
 	status = "okay";
 };
 
@@ -296,11 +262,10 @@
 	status = "okay";
 };
 
-/* ttymxc2 UART */
-&uart3 {
+&uart5 {
+		
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart3>;
-	fsl,uart-has-rtscts;
+	pinctrl-0 = <&pinctrl_uart5>;					 
 	status = "okay";
 };
 
@@ -419,37 +384,20 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
-};
 
-&i2c2 {
-	clock_frequency = <100000>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c2>;
-	status = "okay";
+	/* Atmel mxt640t Touchcontroller */
+	touch@4a {
+        compatible = "atmel,maxtouch";
+        reg = <0x4a>;
+		interrupt-parent = <&gpio5>;
+		interrupts = <5 IRQ_TYPE_LEVEL_LOW>;
+    };
 
-	codec: wm8731@1a {
-		compatible = "wlf,wm8731";
-		reg = <0x1a>;
-		clocks = <&clks IMX6UL_CLK_SAI2>;
-		clock-names = "mclk";
-	};
-
-	ft5x06_ts@38 {
-		compatible = "edt,edt-ft5x06";
-		reg = <0x38>;
-		interrupt-parent = <&gpio3>;
-		interrupts = <4 0>;
-		touchscreen-size-x = <800>;
-		touchscreen-size-y = <480>;
-		touchscreen-inverted-x;
-		touchscreen-inverted-y;
-	};
-
-	/* DS1307 RTC module */
-	rtc@0x68 {
-		compatible = "dallas,ds1307";
-		reg = <0x68>;
-	};
+	/* ST M41T00S RTC module */
+    rtc@0x68 {
+        compatible = "stm,m41t00";
+        reg = <0x68>;
+	};		 
 };
 
 &iomuxc {
@@ -458,10 +406,25 @@
 	imx6ul-evk {
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0	/* User LED */
-				MX6UL_PAD_GPIO1_IO00__GPIO1_IO00	0x17059	/* User Button */
-				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
-				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0	/* CONTR_BRD_EN_LID */
+				MX6UL_PAD_CSI_DATA00__GPIO4_IO21	0x1b0b0	/* HW_VERSION_3 */
+				MX6UL_PAD_GPIO1_IO07__ENET1_MDC		0x1b0b0
+				MX6UL_PAD_GPIO1_IO06__ENET1_MDIO	0x1b0b0
+				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x1b0b0	/* BT Enable */
+				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x1b0b0
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05 	0x1b0b0 /* TOUCH_IRQ_CHANGE */
+				MX6UL_PAD_GPIO1_IO00__GPT1_CAPTURE1	0x1b0b0 /* ROTORCODESIGNAL */
+				MX6UL_PAD_UART3_RX_DATA__GPIO1_IO25	0x1b0b0 /* EN_TESTMODE */
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 /* SENSE_PWR_IN */
+				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x1b0b0 /* SPEEDSIGNAL */
+				MX6UL_PAD_ENET2_RX_EN__GPIO2_IO10	0x1b0b0 /* HW_VERSION_0 */
+				MX6UL_PAD_ENET2_TX_DATA0__GPIO2_IO11	0x1b0b0 /* HW_VERSION_1 */
+				MX6UL_PAD_ENET2_TX_DATA1__GPIO2_IO12	0x1b0b0 /* HW_VERSION_2 */
+				MX6UL_PAD_ENET2_TX_EN__GPIO2_IO13	0x1b0b0 /* HW_VARIANT_0 */
+				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14	0x1b0b0 /* HW_VARIANT_1 */
+				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15	0x1b0b0 /* HW_VARIANT_2 */
+				MX6UL_PAD_CSI_DATA01__GPIO4_IO22	0x1b0b0 /* HW_VARIANT_3 */
+				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x1b0b0 /* EN_PRODUCTIONMODE */
 #ifdef WIFI
 				MX6UL_PAD_GPIO1_IO03__REF_CLK_32K	0x03029	/* WLAN Slow Clock */
 #endif
@@ -481,24 +444,10 @@
 			>;
 		};
 
-		pinctrl_enet2: enet2grp {
-			fsl,pins = <
-				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA1__ENET2_RDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_EN__ENET2_TX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA0__ENET2_TDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA1__ENET2_TDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_CLK__ENET2_REF_CLK2	0x4001b031
-				MX6UL_PAD_JTAG_MOD__GPIO1_IO10		0x1b0b0
-			>;
-		};
-
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA09__FLEXCAN1_RX	0x1b020
-				MX6UL_PAD_LCD_DATA08__FLEXCAN1_TX	0x1b020
+				MX6UL_PAD_UART3_RTS_B__FLEXCAN1_RX	0x1b020
+				MX6UL_PAD_UART3_CTS_B__FLEXCAN1_TX	0x1b020
 			>;
 		};
 
@@ -539,9 +488,21 @@
 			>;
 		};
 
-		pinctrl_pwm1: pwm1grp {
+		pinctrl_pwm6: pwm6grp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA00__PWM1_OUT		0x110b0
+				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x110b0 /* PWM BUZZER+ */
+			>;
+		};
+
+		pinctrl_pwm7: pwm7grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TCK__PWM7_OUT		0x110b0 /* PWM BUZZER- */
+			>;
+		};
+
+		pinctrl_pwm8: pwm8grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TRST_B__PWM8_OUT		0x110b0 /* PWM BACKLIGHT */
 			>;
 		};
 
@@ -561,12 +522,10 @@
 			>;
 		};
 
-		pinctrl_uart3: uart3grp {
+		pinctrl_uart5: uart5grp {
 			fsl,pins = <
-				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX	0x1b0b1
-				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART3_CTS_B__UART3_DCE_CTS	0x1b0b1
-				MX6UL_PAD_UART3_RTS_B__UART3_DCE_RTS	0x1b0b1
+				MX6UL_PAD_UART5_TX_DATA__UART5_DCE_TX	0x1b0b1
+				MX6UL_PAD_UART5_RX_DATA__UART5_DCE_RX	0x1b0b1										
 			>;
 		};
 
@@ -647,13 +606,6 @@
 			>;
 		};
 
-		pinctrl_i2c2: i2c2grp {
-			fsl,pins = <
-				MX6UL_PAD_UART5_TX_DATA__I2C2_SCL	0x4001b8b0
-				MX6UL_PAD_UART5_RX_DATA__I2C2_SDA	0x4001b8b0
-			>;
-		};
-
 		pinctrl_tsc: tscgrp {
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO01__GPIO1_IO01	0xb0
@@ -671,17 +623,7 @@
 				MX6UL_PAD_CSI_DATA07__SAI1_TX_DATA	0x11088
 			>;
 		};
-
-		pinctrl_sai2: sai2grp {
-			fsl,pins = <
-				MX6UL_PAD_JTAG_TDI__SAI2_TX_BCLK	0x17088
-				MX6UL_PAD_JTAG_TDO__SAI2_TX_SYNC	0x17088
-				MX6UL_PAD_JTAG_TRST_B__SAI2_TX_DATA	0x11088
-				MX6UL_PAD_JTAG_TCK__SAI2_RX_DATA	0x11088
-				MX6UL_PAD_JTAG_TMS__CCM_CLKO1		0x17088
-			>;
-		};
-
+		
 		pinctrl_wdog: wdoggrp {
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO08__WDOG1_WDOG_B	0x78b0
@@ -693,4 +635,3 @@
 &snvs_rtc {
        status = "disabled";
 };
-
