added CHRIST & SIGMA bootlogo

--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -31,6 +31,14 @@ config LOGO_VARISCITE_CLUT224
 	bool "224-color Variscite Linux logo"
 	default y
 
+config LOGO_CHRIST_CLUT224
+	bool "224-color Christ Linux logo"
+	default y
+
+config LOGO_SIGMA_CLUT224
+	bool "224-color Sigma Linux logo"
+	default y
+
 config LOGO_BLACKFIN_VGA16
 	bool "16-colour Blackfin Processor Linux logo"
 	depends on BLACKFIN
