--- a/arch/arm/configs/imx6ul-var-dart_defconfig
+++ b/arch/arm/configs/imx6ul-var-dart_defconfig
@@ -320,9 +320,12 @@ CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
+CONFIG_LOGO_VARISCITE_CLUT224=n
+CONFIG_LOGO_CHRIST_CLUT224=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 # CONFIG_LOGO_LINUX_CLUT224 is not set
+# CONFIG_LOGO_SIGMA_CLUT224 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=m
